[package]
name = "poly-maker"
version = "0.1.0"
edition = "2021"
description = "A market making bot for Polymarket prediction markets"
license = "MIT"

[dependencies]
# Polymarket official SDK (CLOB, WebSocket, Data API, CTF for merge)
polymarket-client-sdk = { version = "0.4", features = ["clob", "ws", "data", "ctf"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP and JSON
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Environment
dotenvy = "0.15"

# Time and decimal
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
rust_decimal_macros = "1"

# Concurrency
futures = "0.3"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# CSV for Google Sheets export
csv = "1"
regex = "1"

# Order book key (float-comparable for BTreeMap)
ordered-float = "4"

# Error handling
anyhow = "1"
thiserror = "1"
secrecy = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
